Add unit tests for kafka utility.